k8s/api-gateway/gateway-app.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-app
  labels:
    app: gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      name: gateway-template
      labels:
        app: gateway-app
    spec:
      containers:
        - name: gateway-service
          image: isaacafrifa/bm-api-gateway:0.0.1-SNAPSHOT-20250119-2050
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 5
  strategy:
    # RollingUpdate strategy ensures zero-downtime during deployments by gradually updating pods
    type: RollingUpdate
    rollingUpdate:
      # Allow creating max 1 pod above desired count during updates
      # Example: If replicas=3, we can have 4 pods temporarily during update
      maxSurge: 1
      # Ensure no pods become unavailable during the update
      # Forces new pods to be ready before removing old ones
      maxUnavailable: 0

  # add resource limits and requests later

---

# Service
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway-app    # Match the deployment labels
spec:
  type: ClusterIP
  selector:
    app: gateway-app  # Matches Deployment's label
  ports:
    - protocol: TCP
      port: 9000      # The port other services use to access
      targetPort: 9000  # The container port
